# error-book

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.example.toml  release.sh
skills/error-intake/: SKILL.md
skills/summary-practice-coach/: SKILL.md
src/: config.rs  lib.rs  main.rs  pdf.rs
src/analysis/: analyzer.rs  parser.rs
src/cli/: commands.rs
src/db/: migration.rs  mod.rs  models.rs  repository.rs
src/llm/: client.rs  embedding.rs  mod.rs  prompts.rs
src/mcp/: server.rs
src/practice/: generator.rs
src/storage/: image.rs
src/summary/: generator.rs  image_generator.rs  mod.rs
tests/: test_embedding.rs
