[package]
name = "error-book"
version = "0.1.0"
edition = "2021"
description = "基于AI的错题本：解析、分析、总结错题"

[[bin]]
name = "error-book"
path = "src/main.rs"

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }

# HTTP 客户端（rustls 避免 openssl-sys）
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

# CLI
clap = { version = "4", features = ["derive"] }

# 数据库
libsql = "0.9"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUID
uuid = { version = "1", features = ["v4"] }

# Base64
base64 = "0.22"

# 配置
toml = "1.1"

# 时间
chrono = { version = "0.4", features = ["serde"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 错误处理
anyhow = "1"
thiserror = "2"

# 异步 trait
async-trait = "0.1"

# 随机数（用于重试抖动）
rand = "0.10"

# MCP
rmcp = { version = "1.3", features = ["server", "macros", "transport-io"] }
schemars = "1"

# PDF 生成 (Typst)
typst = "0.14"
typst-pdf = "0.14"
